# bazel-playground

./: .gitignore  WORKSPACE
example-apps/simple-java/: BUILD.bazel
example-apps/simple-java/src/main/java/com/example/: ProjectRunner.java
